UtahLiveDataTest/src/objects/ProgressReports__c.object
<CustomObject>
    <description>[Business] Progress Report on the Grant/Award</description>
    <fields>
        <fullName>Acknowledgement__c</fullName>
        <label>Acknowledgement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement1__c</fullName>
        <description>This field is used in Grantor: PSR Progress Report form.</description>
        <label>Agreement1</label>
        <length>22768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assigned to ( owner of report)</description>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Progress_Report3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Progress Report</relationshipLabel>
        <relationshipName>Progress_Report</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BasisOfAccounting__c</fullName>
        <label>Basis Of Accounting</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNSNumber__c</fullName>
        <label>DUNS Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateReportSubmitted__c</fullName>
        <label>Date Report Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysLeft__c</fullName>
        <formula>IF( (ReportDueDate__c )&gt; TODAY() ,(ReportDueDate__c) - TODAY(),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Left</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <label>EIN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmailAddress__c</fullName>
        <label>EmailAddress</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmailPOC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person to submit Progress Reports</description>
        <label>Email POC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Progress_Report2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FederalAgency__c</fullName>
        <description>obsolete</description>
        <inlineHelpText>obsolete</inlineHelpText>
        <label>Federal Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederalGrant__c</fullName>
        <label>Federal Grant</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FinancialDataAvbl__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FinancialDataAvbl</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FiscalApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Progress_Report1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FoUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FoUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Progress_Report4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Form1Narrative__c</fullName>
        <description>This field is used in the (PSR: Program Progress Reports)</description>
        <label>Narrative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Form1ProgressReportEndDate__c</fullName>
        <description>This field is used in the (PSR: Program Progress Reports)</description>
        <label>Progress Report End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Form1ProgressReportStartDate__c</fullName>
        <description>This field is used in the  (PSR: Program Progress Reports)</description>
        <label>Progress Report Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FormsValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for validation of form depends upon percentage of form filled.</description>
        <label>Forms Validated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FrequencyType__c</fullName>
        <label>Frequency Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Future_Plans__c</fullName>
        <label>Future Plans</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GrantAdministrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GrantAdministrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Progress_Report9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantName__c</fullName>
        <label>Grant Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantTitle__c</fullName>
        <formula>Grant__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipLabel>Progress Report</relationshipLabel>
        <relationshipName>Progress_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantorAgency__c</fullName>
        <formula>Award__r.Grant__r.ExternalOrganization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantor Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantorOrganization__c</fullName>
        <formula>Grant__r.ExternalOrganization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantor Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideEditBtn__c</fullName>
        <formula>IF(Text(Status__c)==&apos;Created&apos;,false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Edit Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Progress_Report7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsFixed__c</fullName>
        <formula>TermandCondition__r.IsFixed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsFixed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReportComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is ReportComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NameAndTitleOfACO__c</fullName>
        <label>NameAndTitleOfACO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameTemplate__c</fullName>
        <formula>&apos;PR-&apos;+ Grant__r.GrantAbbreviation__c +&apos;-&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NameTemplate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <formula>Grant__r.InternalOrganization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Progress_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgressReportAssessment__c</fullName>
        <description>This field is used in Progress Reports for grouping</description>
        <formula>IF (AND (NOT(ISBLANK(DateReportSubmitted__c)),(DateReportSubmitted__c&lt;ReportDueDate__c )),&quot;ON TIME SUBMISSION&quot;,IF(AND(NOT(ISBLANK(DateReportSubmitted__c)),(DateReportSubmitted__c&gt;ReportDueDate__c )),&quot;LATE SUBMISSION&quot;,&quot;OVERDUE SUBMISSION&quot;))</formula>
        <label>Progress Report Assessment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectEndDate__c</fullName>
        <formula>Award__r.Grant__r.ProjectPeriodEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectGrantPeriod__c</fullName>
        <label>Project Grant Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectOfficer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Progress_Report5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectStartDate__c</fullName>
        <formula>Award__r.Grant__r.ProjectPeriodStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReceipientAccountNumber__c</fullName>
        <label>Receipient Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecipientOrganization__c</fullName>
        <label>Recipient Organization</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReportDueDate__c</fullName>
        <label>Report Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReportDueMonth__c</fullName>
        <description>Created for showing due month on the dashboards</description>
        <formula>CASE(MONTH( ReportDueDate__c ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReportDueMonth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportType__c</fullName>
        <label>Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>Desk Review</fullName>
                </value>
                <value>
                    <fullName>Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportingFrequency__c</fullName>
        <label>Reporting Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportingPeriodEndDate__c</fullName>
        <label>Reporting Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReportingPeriodStartDate__c</fullName>
        <label>Reporting Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <label>Signature</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SiteVisit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Visit</label>
        <referenceTo>SiteVisit__c</referenceTo>
        <relationshipLabel>Progress Report</relationshipLabel>
        <relationshipName>Progress_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted to Grantor</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Internally Approved</fullName>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubmitForApproval__c</fullName>
        <formula>OR 
( 
(ISPICKVAL(Status__c,&apos;Submitted for Approval&apos;)), 
(ISPICKVAL(Status__c,&apos;Approved&apos;)), 
(ISPICKVAL(Status__c,&apos;Submitted to Grantor&apos;))
, 
AND( (ISBLANK(ProgramApprover__c) ),(ISBLANK(FiscalApprover__c)) )
,(ISBLANK(EmailPOC__c))

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submit For Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubmittedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Progress_Report6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubmittedOn__c</fullName>
        <label>Submitted On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TelephoneNo__c</fullName>
        <label>Telephone No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TermandCondition__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Term and Condition</label>
        <referenceTo>TermCondition__c</referenceTo>
        <relationshipLabel>Progress Report</relationshipLabel>
        <relationshipName>Progress_Report</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <formula>TEXT($User.UserType)</formula>
        <label>UserType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isApproved__c</fullName>
        <formula>OR(ISPICKVAL($User.UserType,&apos;Standard&apos;)&amp;&amp;!ISPICKVAL(Status__c,&apos;Approved&apos;),
!ISPICKVAL($User.UserType,&apos;Standard&apos;)&amp;&amp;!ISPICKVAL(Status__c,&apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isFiscalReport__c</fullName>
        <formula>ISPICKVAL(ReportType__c,&apos;Fiscal&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isFiscalReport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isProgramReport__c</fullName>
        <formula>ISPICKVAL(ReportType__c,&apos;Program&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isProgramReport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isStatusApproved__c</fullName>
        <formula>OR(ISPICKVAL(Status__c,&apos;Approved&apos;),
    ISPICKVAL(Status__c,&apos;Submitted to Grantor&apos;),
    ISPICKVAL(Status__c,&apos;Submitted for Approval&apos;)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isStatusApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isStatusCreated__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&apos;Created&apos;), false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isStatusCreated</label>
        <type>Checkbox</type>
    </fields>
    <label>Progress Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>ReportDueDate__c</columns>
        <columns>ReportingPeriodEndDate__c</columns>
        <columns>Award__c</columns>
        <columns>Title__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Progress Report ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Progress Report</pluralLabel>
    <recordTypes>
        <fullName>Grantee</fullName>
        <active>true</active>
        <label>Grantee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grantor</fullName>
        <active>true</active>
        <label>Grantor</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>GeneralShare__c</fullName>
        <label>General Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>GovGrants_Share__c</fullName>
        <label>GovGrants Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>OwnerReplacement__c</fullName>
        <label>Owner Replacement</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SharetoExternalPOC__c</fullName>
        <label>Share to External POC</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SharetoFO__c</fullName>
        <label>Share to FO</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SharetoProgramApprover__c</fullName>
        <label>Share to Program Approver</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SharingforReviewandApproval__c</fullName>
        <label>SharingforReviewandApproval</label>
    </sharingReasons>
</CustomObject>